--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,6 @@ authors = ["Krzysztof Drewniak <krzysdrewniak@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+blas-src = { version = "0.2", features = ["openblas"] }
+ndarray = { version = "0.12", features = ["blas"] }
+smallvec = "0.6.9"
