--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,13 @@ edition = "2018"
 [dependencies]
 blas-src = { version = "0.2", features = ["openblas"] }
 ndarray = { version = "0.12", features = ["blas"] }
-num-integer = "0.1.39"
+
 smallvec = "0.6.9"
-itertools = "0.8.0"
 bit-vec = "0.5.1"
+
+num-integer = "0.1.39"
+itertools = "0.8.0"
 byteorder = "1.3.1"
+
+serde = "1.0"
+serde_json = "1.0"
