--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,7 @@ num-integer = "0.1.39"
 itertools = "0.8.0"
 byteorder = "1.3.1"
 
-serde = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+
+error-chain = "0.12.1"
