--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,11 @@ version = "0.1.0"
 authors = ["Krzysztof Drewniak <krzysdrewniak@gmail.com>"]
 edition = "2018"
 
+build = "build.rs"
+
 [dependencies]
-blas-src = { version = "0.2", features = ["openblas"] }
+intel-mkl-src = { version = "0.4.0" }
+blas-src = { version = "0.2" }
 ndarray = { version = "0.12", features = ["blas"] }
 
 smallvec = "0.6.9"
@@ -21,6 +24,9 @@ serde_json = "1.0"
 error-chain = "0.12.1"
 
 clap = "2"
+
+[build-dependencies]
+pkg-config = "0.3"
 
 [dev-dependencies]
 tempfile = "3"
