--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "swizzleflow"
-version = "0.2.1"
+version = "0.3.0"
 authors = ["Krzysztof Drewniak <krzysdrewniak@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-intel-mkl-src = { version = "0.4.0" }
-ndarray = { version = "0.13", features = ["blas"] }
+# intel-mkl-src = { version = "0.4.0" }
+ndarray = { version = "0.13" }
 
 smallvec = "0.6.9"
 bit-vec = "0.6.1"
@@ -24,3 +24,7 @@ clap = "2"
 
 [dev-dependencies]
 tempfile = "3"
+
+[features]
+default = []
+stats = []
