--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,9 @@ byteorder = "1.3.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
+parking_lot = "0.10.2"
+rayon = "1.3"
+
 error-chain = "0.12.1"
 
 clap = "2"
