--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ ndarray = { version = "0.13" }
 smallvec = "1.4.0"
 bit-vec = "0.6.2"
 
-fnv = "1.0.7"
+rustc-hash = "1.1.0"
 
 num-integer = "0.1.39"
 itertools = "0.9.0"
