--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,12 +13,12 @@ bit-vec = "0.6.2"
 
 rustc-hash = "1.1.0"
 
+hex = "0.4"
+ring = "0.16"
+
 num-integer = "0.1.39"
 itertools = "0.9.0"
 byteorder = "1.3.1"
-
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
 
 error-chain = "0.12.2"
 
