--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,10 @@ clap = "2"
 
 ref_slice = "1.2.0"
 
+parking_lot = "0.11.0"
+crossbeam-channel = "0.5.*"
+crossbeam-utils = "0.8.*"
+
 [dev-dependencies]
 tempfile = "3"
 
